--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="titulo">COMO DEUS ME VÊ?</h1>
 
         <div class="imagem-centro">
-            <img src="imagem.png" alt="Imagem central">
+            <img src="imagem.jpg" alt="Imagem central">
         </div>
 
         <div class="info">
@@ -61,3 +61,4 @@ function confirmar(){
 
 </body>
 </html>
+
