--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Como Deus me vê?</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -12,36 +12,23 @@
 <div class="background"></div>
 <div class="overlay"></div>
 
-<section class="hero">
+<div class="container">
 
-    <h1 class="titulo">COMO DEUS ME VÊ?</h1>
-    <p class="subtitulo">Descubra sua identidade e propósito.</p>
-
-</section>
-
-<section class="evento">
+    <h1>COMO DEUS ME VÊ?</h1>
 
     <div class="card">
         <h2>Encontro dos Jovens</h2>
-
-        <div class="info-item">📅 <span>27 de Fevereiro</span></div>
-        <div class="info-item">🕒 <span>19h40 às 22h</span></div>
-        <div class="info-item">📍 <span>Igreja IEUES</span></div>
-
+        <p>📅 27 de Fevereiro</p>
+        <p>🕒 19h40 às 22h</p>
+        <p>📍 Igreja IEUES</p>
     </div>
 
-</section>
-
-<section class="confirmar">
-
-    <h3>Confirme sua presença</h3>
-
-    <div class="form">
+    <div class="confirmacao">
         <input type="text" id="nome" placeholder="Digite seu nome">
         <button onclick="confirmar()">Confirmar Presença</button>
     </div>
 
-</section>
+</div>
 
 <script>
 function confirmar(){
@@ -54,9 +41,7 @@ function confirmar(){
 
     fetch("COLE_AQUI_SEU_LINK_DO_SCRIPT", {
         method: "POST",
-        body: new URLSearchParams({
-            "nome": nome
-        })
+        body: new URLSearchParams({ "nome": nome })
     })
     .then(response => response.text())
     .then(data => {
