Update fetch URL to a valid Google Script endpoint

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function confirmar(){
         return;
     }
 
-    fetch("COLE_AQUI_SEU_LINK_DO_SCRIPT", {
+    fetch("https://script.google.com/macros/s/AKfycbwT4gpUs6xafitUjDUAnMV2jaCEGfRISXxU9tum2eR_ChB63SdJzIuj2acsnQy0v_uZLg/exec", {
         method: "POST",
         body: new URLSearchParams({ "nome": nome })
     })
