--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Desafio 7 Dias | Como Deus Me Vê?</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <div id="app">
@@ -14,7 +15,9 @@
     <section id="splash" class="screen active">
       <h1>Desafio 7 Dias</h1>
       <p>Como Deus Me Vê?</p>
-      <button type="button" onclick="goTo('cadastro')">Começar</button>
+      <button type="button" onclick="goTo('cadastro')">
+        Começar
+      </button>
     </section>
 
     <!-- Cadastro -->
@@ -25,7 +28,9 @@
       <input type="number" id="idade" placeholder="Idade">
       <input type="tel" id="telefone" placeholder="Telefone">
 
-      <button type="button" onclick="cadastrar()">Entrar no desafio</button>
+      <button type="button" onclick="cadastrar()">
+        Entrar no desafio
+      </button>
     </section>
 
     <!-- Dashboard -->
@@ -35,7 +40,9 @@
 
       <div id="diasContainer"></div>
 
-      <button type="button" onclick="goTo('diario')">Meu Diário</button>
+      <button type="button" onclick="goTo('diario')">
+        Meu Diário
+      </button>
     </section>
 
     <!-- Tela Dia -->
@@ -43,9 +50,14 @@
       <h2 id="tituloDia"></h2>
       <p id="conteudoDia"></p>
 
-      <textarea id="textoDiario" placeholder="Escreva aqui o que Deus falou com você..."></textarea>
+      <textarea 
+        id="textoDiario" 
+        placeholder="Escreva aqui o que Deus falou com você...">
+      </textarea>
 
-      <button type="button" onclick="concluirDia()">Concluir Dia</button>
+      <button type="button" onclick="concluirDia()">
+        Concluir Dia
+      </button>
     </section>
 
     <!-- Diário Geral -->
@@ -53,11 +65,14 @@
       <h2>Meu Diário 💛</h2>
       <div id="listaDiario"></div>
 
-      <button type="button" onclick="goTo('dashboard')">Voltar</button>
+      <button type="button" onclick="goTo('dashboard')">
+        Voltar
+      </button>
     </section>
 
   </div>
 
   <script src="js/app.js"></script>
+
 </body>
 </html>
