Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
       </button>
     </section>
 
+<!-- Home -->
+<section id="home" class="screen">
+  <h2 id="boasVindas"></h2>
+
+  <button onclick="irParaDesafio()">
+    🌟 Desafio 7 Dias
+  </button>
+
+  <button onclick="logout()">
+    🚪 Sair
+  </button>
+</section>
+
+
     <!-- Dashboard -->
     <section id="dashboard" class="screen">
       <h2 id="saudacao"></h2>
