--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <!-- ===== TELA INICIAL ===== -->
     <section id="splash" class="screen active splash-screen">
+<img src="imagem.jpg" width="200">
+
 
       <!-- Overlay escuro -->
       <div class="overlay"></div>
