Refactor home section buttons and structure

--- a/index.html
+++ b/index.html
@@ -67,20 +67,26 @@
 
     <!-- ===== HOME ===== -->
     <section id="home" class="screen">
-      <h2 id="boasVindas"></h2>
 
-      <button type="button" onclick="irParaDesafio()">
-        🌟 Desafio 7 Dias
-      </button>
+  <div class="home-card">
 
-      <button type="button" onclick="goTo('diario')">
-        📖 Meu Diário
-      </button>
+    <h2 id="boasVindas"></h2>
 
-      <button type="button" onclick="logout()">
-        🚪 Sair
-      </button>
-    </section>
+    <button type="button" onclick="irParaDesafio()">
+      🌟 Desafio 7 Dias
+    </button>
+
+    <button type="button" onclick="goTo('diario')">
+      📖 Meu Diário
+    </button>
+
+    <button type="button" onclick="logout()">
+      🚪 Sair
+    </button>
+
+  </div>
+
+</section>
 
 
     <!-- ===== DASHBOARD ===== -->
