Change heading from 'Ranking' to 'Jornada'

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       <div class="card" onclick="irParaRanking()">
         <div class="icon">🏆</div>
-        <h3>Ranking</h3>
+        <h3>Jornada</h3>
         <p>Veja sua posição</p>
       </div>
 
