Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -99,6 +99,29 @@
   </div>
 </section>
 
+ <!-- ===== DESAFIO TELAS ===== -->
+
+<div id="desafio" class="screen">
+
+  <div class="home-card">
+
+    <h2 id="tituloDesafio"></h2>
+
+    <p id="fraseDesafio" style="margin:20px 0; font-weight:bold;"></p>
+
+    <p id="versiculoDesafio" style="font-style:italic; opacity:0.8;"></p>
+
+    <textarea 
+      id="textoReflexao"
+      placeholder="Escreva aqui o que você entendeu..."
+      style="width:100%; margin-top:20px; padding:15px; border-radius:15px; border:none; height:120px;">
+    </textarea>
+
+    <button onclick="concluirDesafio()">Concluir</button>
+
+  </div>
+
+</div>
 
     <!-- ===== DASHBOARD ===== -->
     <section id="dashboard" class="screen">
